# ForceTeller

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  LICENSE  PRD.md  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/devlog/: 2026-07-19_16-41-23_a11y-overlay-contract.md  2026-07-19_16-41-23_a11y-overlay-contract.sync-snapshot.json  2026-07-19_18-01-16_analysis-p1-p3-followthrough.md  2026-07-19_18-01-16_analysis-p1-p3-followthrough.sync-snapshot.json  2026-07-23_23-27-19_service-completion-pass.md  2026-07-23_23-27-19_service-completion-pass.sync-snapshot.json  2026-07-24_10-52-36_manseol-prompt-verification.md  2026-07-24_10-52-36_manseol-prompt-verification.sync-snapshot.json  2026-07-24_11-36-15_foreign-birth-timezone.md  2026-07-24_11-36-15_foreign-birth-timezone.sync-snapshot.json  DEVLOG.md
.github/workflows/: ci.yml
agents/: __init__.py  agent_configs.py  base_agent.py  config.py  factory.py  graph.py  llm.py  nodes.py  orchestrator.py  schemas.py  state.py
agents/interpreters/: __init__.py  career_agent.py  fortune_agent.py  health_agent.py  personality_agent.py  relationship_agent.py  school_compare_agent.py  synthesis_agent.py  yongsin_agent.py
agents/prompts/: __init__.py  system_prompts.py
api/: __init__.py  converters.py  dependencies.py  errors.py  formatters.py  rate_limit.py  schemas.py  server.py
api/routes/: __init__.py  analysis.py  chat.py  manseol.py
config/: __init__.py  constants.py  logging_config.py  settings.py  version.py
conversation/: __init__.py  context_builder.py  db_session_manager.py  session_manager.py
db/: __init__.py  base.py  models.py  repository.py
docs/plans/: PLAN_fortune-teller-refactoring.md  REFINED_fortune-teller-refactoring.md
manseol/: __init__.py  cli.py
manseol/analysis/: __init__.py
manseol/calculator/: __init__.py  current_fortune.py  fortune_cycle.py  hidden_stems.py  interactions.py  pillar_engine.py  shensha.py  ten_gods.py  twelve_phases.py
manseol/core/: __init__.py  astronomical.py  solar_terms.py  (+2 more)
migrations/: env.py
tests/: conftest.py
utils/: __init__.py  llm_client.py  protocols.py
web/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
(+177 files in other folders)
